tests/fail/non_unicode.rs
fn main() {
    sscanf::scanf!("Hi", "ay̆a{ay̆a}ay̆a");
}